# internal/app/controllers/file.go
@@ -18,6 +18,7 @@ type fileControllerParams struct {
 type FileController interface {
 	//GetFile(ctx echo.Context) error
 	UploadFile(ctx echo.Context) error
+	PredictImage(ctx echo.Context) error
 }
 
 func NewFileController(params fileControllerParams) FileController {
@@ -68,6 +69,33 @@ func (p fileControllerParams) UploadFile(ctx echo.Context) error {
 	return lib.Response{
 		Status:  http.StatusOK,
 		Data:    dto.NewFileDTO(uploadedFile),
+		Message: "upload file successfull",
+	}.JSON(ctx)
+
+}
+
+// CreateOrder godoc
+// @Summary Predict image
+// @Description Predict image
+// @Tags file
+// @Accept mpfd
+// @Produce  json
+// @Param file formData file true "this is a test file"
+// @Success 200
+// @Router /api/v1/file/predict/ [post]
+func (p fileControllerParams) PredictImage(ctx echo.Context) error {
+	file, err := ctx.FormFile("file")
+	if err != nil {
+		return err
+	}
+	uploadedFile, err := p.FileService.PredictImage(*file)
+	if err != nil {
+		return err
+	}
+
+	return lib.Response{
+		Status:  http.StatusOK,
+		Data:    uploadedFile,
 		Message: "upload file successfull",
 	}.JSON(ctx)
 
